[metadata]
name = NoSuspend.py
version = 0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH/NoSuspend.py
description = A library to make system not to go into powersaving mode when the program is doing work.
long_description = file: ReadMe.md
long_description_content_type = text/markdown
keywords = power management, util, suspend, stand-by, ACPI, S3, S1, hibernation
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: Microsoft :: Windows
	Operating System :: Microsoft :: Linux
	Environment :: X11 Applications
	Environment :: X11 Applications :: Gnome
	Environment :: X11 Applications :: GTK
	Environment :: X11 Applications :: KDE
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: System :: Systems Administration

[options]
zip_safe = True
py_modules = NoSuspend
setup_requires = setuptools_scm;
extras_requires =
	linux = dbus-python;platform_system=="Linux"

[options.entry_points]
console_scripts = NoSuspend = NoSuspend:main, caffeinate = NoSuspend:main, 
